Bug 558490: Infrastructure needed to support SetPriority in HttpChannelChild.  a=jduell, r=dwitte